[gd_scene load_steps=4 format=3 uid="uid://pd1a3fwjkrdl"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/options_menu/audio_options/audio_options.gd" id="1_1aoep"]
[ext_resource type="PackedScene" uid="uid://b8col31gjtj56" path="res://node/menu/menu_slider/menu_slider.tscn" id="3_o7sdi"]
[ext_resource type="PackedScene" uid="uid://b678n5udjckfe" path="res://node/menu/menu_toggle/menu_toggle.tscn" id="4_wpfi7"]

[node name="AudioOptions" type="MarginContainer"]
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_1aoep")

[node name="RootVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MasterMenuSlider" parent="RootVBoxContainer" instance=ExtResource("3_o7sdi")]
unique_name_in_owner = true
layout_mode = 2
id = 1

[node name="LabelLabel" parent="RootVBoxContainer/MasterMenuSlider/HBoxContainer/LabelMarginContainer/LabelHBoxContainer" index="0"]
text = "Master"

[node name="MusicMenuSlider" parent="RootVBoxContainer" instance=ExtResource("3_o7sdi")]
unique_name_in_owner = true
layout_mode = 2
id = 2
label = "MENU_LABEL_MUSIC"

[node name="LabelLabel" parent="RootVBoxContainer/MusicMenuSlider/HBoxContainer/LabelMarginContainer/LabelHBoxContainer" index="0"]
text = "Music"

[node name="SFXMenuSlider" parent="RootVBoxContainer" instance=ExtResource("3_o7sdi")]
unique_name_in_owner = true
layout_mode = 2
id = 3
label = "MENU_LABEL_EFFECTS"

[node name="LabelLabel" parent="RootVBoxContainer/SFXMenuSlider/HBoxContainer/LabelMarginContainer/LabelHBoxContainer" index="0"]
text = "Effects"

[node name="AudioMenuToggle" parent="RootVBoxContainer" instance=ExtResource("4_wpfi7")]
unique_name_in_owner = true
layout_mode = 2
id = 1
label = "MENU_LABEL_AUDIO"
label_on = "MENU_LABEL_ON"
label_off = "MENU_LABEL_OFF"

[node name="LabelLabel" parent="RootVBoxContainer/AudioMenuToggle/HBoxContainer/LabelMarginContainer/LabelHBoxContainer" index="0"]
text = "Audio"

[node name="ToggleButton" parent="RootVBoxContainer/AudioMenuToggle/HBoxContainer/ToggleMarginContainer/ToggleVBoxContainer" index="0"]
text = "       Off       "

[editable path="RootVBoxContainer/MasterMenuSlider"]
[editable path="RootVBoxContainer/MusicMenuSlider"]
[editable path="RootVBoxContainer/SFXMenuSlider"]
[editable path="RootVBoxContainer/AudioMenuToggle"]
